# pidgeon

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  release-plz.toml  run_pidgeon_demo.sh
.claude/agent-memory/lambda-rust-purist/: MEMORY.md  pidgeoneer-analysis.md
.claude/agent-memory/mathematician/: MEMORY.md  pid-formulations.md
.claude/agent-memory/rust-test-expert/: MEMORY.md
.claude/agents/: lambda-rust-purist.md  mathematician.md  physicist.md  rust-test-expert.md
.github/workflows/: ci.yml
benches/: pid_benchmark.rs
crates/pidgeon/: CHANGELOG.md  Cargo.toml  README.md
crates/pidgeon/benches/: pid_benchmark.rs
crates/pidgeon/examples/: debug_temperature_control.rs  drone_altitude_control.rs  multithreaded_control.rs  temperature_control.rs
crates/pidgeon/src/: compute.rs  config.rs  controller.rs  debug.rs  enums.rs  error.rs  lib.rs  state.rs  thread_safe.rs
crates/pidgeon/src/tests/: core_tests.rs  mod.rs  std_tests.rs
crates/pidgeoneer/: CHANGELOG.md  Cargo.toml  README.md
crates/pidgeoneer-old/: Cargo.toml  index.html
crates/pidgeoneer-old/src/: lib.rs  main.rs
crates/pidgeoneer-old/style/: main.scss
crates/pidgeoneer/src/: app.rs  iggy_client.rs  lib.rs  main.rs  models.rs  websocket.rs
crates/thermostat-web-demo/: Cargo.toml  README.md
crates/thermostat-web-demo/src/: app.rs  lib.rs  main.rs
crates/thermostat-web-demo/src/components/: mod.rs  thermostat.rs
crates/thermostat-web-demo/style/: main.scss
examples/: multithreaded_control.rs  temperature_control.rs
src/: app.rs  iggy_client.rs  lib.rs  main.rs
