[package]
name = "pidgeon"
version = "0.3.1"
edition = "2021"
description = "A robust, thread-safe PID controller library written in Rust"
authors = ["Dario Alessandro"]
repository = "https://github.com/security-union/pidgeon"
license = "MIT OR Apache-2.0"
publish = true
keywords = ["pid", "control", "controller", "robotics", "automation"]
categories = ["science", "embedded", "algorithms", "science::robotics"]
readme = "../../README.md"

[dependencies]
# Optional dependencies for debugging
iggy = { version = "0.6.203", optional = true }
tokio = { version = "1.35.0", features = ["full"], optional = true }
serde = { version = "1.0.193", features = ["derive"], optional = true }
serde_json = { version = "1.0.108", optional = true }
web-time = { version = "1.1.0", optional = true }

[dev-dependencies]
# Dependencies only used in tests and examples
criterion = "0.5"
ratatui = "0.29"
crossterm = "0.28"

[[example]]
name = "debug_temperature_control"
path = "examples/debug_temperature_control.rs"
required-features = ["debugging"]

[[example]]
name = "drone_altitude_control"
path = "examples/drone_altitude_control.rs"

[[bench]]
name = "pid_benchmark"
harness = false
required-features = ["benchmarks"]

[features]
default = ["std"]
std = []
benchmarks = ["std"]
debugging = ["std", "iggy", "tokio", "serde", "serde_json"]
wasm = ["std", "web-time"]
